# meson

docs/markdown/snippets/: clang_cpp_modules.md  cpp_header_units.md  cpp_internal_partitions.md  cpp_module_interfaces.md  cpp_private_module_interfaces.md  gcc_cpp_modules.md  gcc_header_units.md  msvc_cpp_modules.md
docs/yaml/functions/: _build_target_base.yaml
mesonbuild/: build.py
mesonbuild/backend/: ninjabackend.py
mesonbuild/compilers/: __init__.py  compilers.py  cpp.py  fortran.py
mesonbuild/interpreter/: interpreter.py  kwargs.py  type_checking.py
mesonbuild/scripts/: copy.py  depaccumulate.py  depscan.py  meson_exe.py  touch.py
mesonbuild/utils/: core.py
test cases/unit/139 gcc cpp modules/: dotmain.cpp  dotted.cppm  meson.build  modlib_impl.cpp
test cases/unit/140 gcc import std/: hu.h  main.cpp  meson.build
test cases/unit/141 gcc cpp modules diagnostics/: cyca.cppm  cycb.cppm  dupa.cppm  dupb.cppm  exeprov.cppm  importsmissing.cpp  libprov.cppm  meson.build  meson_options.txt  undeclared.cc
test cases/unit/142 gcc header units/: meson.build  mod.cppm  util.h
test cases/unit/143 gcc cpp modules generated header/: gen.py  main.cpp  meson.build  mod.cppm
test cases/unit/144 gcc import std link whole/: a.cppm  b.cppm  main.cpp  meson.build
test cases/unit/145 gcc module cpp_std divergence/: meson.build  modlib.cppm
test cases/unit/146 gcc module subproject cpp_std divergence/: main.cpp  meson.build
test cases/unit/146 gcc module subproject cpp_std divergence/subprojects/submod/: meson.build  submod.cppm
test cases/unit/147 gcc fmodules-ts legacy/: meson.build
test cases/unit/148 gcc modules cross machine/: head.hpp  main.cpp  meson.build  meson_options.txt  mod.cppm  stdmain.cpp  usehu.cpp
test cases/unit/149 msvc cpp modules/: gen_module.py  kwmain.cpp  kwmod.ixx  meson.build  modlib.ixx  pkg-impl.cpp  pkg-part.ixx  pkg.ixx  pkgmain.cpp
test cases/unit/150 msvc import std/: compatmain.cpp  meson.build  usemod.ixx
test cases/unit/151 msvc header units/: main2.cpp  meson.build
test cases/unit/152 msvc undeclared header unit/: declared.h  main.cpp  meson.build  undeclared.h
test cases/unit/153 gcc import std subproject/: main.cpp  meson.build
test cases/unit/153 gcc import std subproject/subprojects/substd/: meson.build  submod.cppm
test cases/unit/154 std dependency override/: meson.build
test cases/unit/155 fortran links gcc cpp module/: capi.cpp  meson.build
test cases/unit/156 clang cpp modules/: genmain.cpp  main.cpp  meson.build  modlib.cppm  oddfile.cppm  oddmain.cpp  pkg-impl.cppm  pkg.cppm  pkgmain.cpp
test cases/unit/157 clang import std/: humain.cpp  meson.build  usemain.cpp
test cases/unit/158 clang header units/: angleutil.h  main.cpp  meson.build
test cases/unit/159 module pthread divergence/: main.cpp  meson.build  modlib.cppm
test cases/unit/160 import std nothreads/: main.cpp  meson.build
test cases/unit/161 std threads conflict/: meson.build
test cases/unit/162 cpp module interfaces/: filemain.cpp  filemod.cc  impl.cc  main.cpp  meson.build  mod.cc
test cases/unit/163 cpp modules regex scanner/: importpart.cpp  importstd.cpp  main.cpp  meson.build  meson_options.txt  mod.cpp  partition.cpp
test cases/unit/164 cpp module graph mutation/: main.cpp  meson.build  mod.cc
test cases/unit/165 module bmi flag divergence/: main.cpp  meson.build  meson_options.txt  modlib.cppm
test cases/unit/166 bmi classes/: main.cpp  main20.cpp  meson.build
test cases/unit/166 bmi classes/subprojects/modlib/: meson.build  util.cppm
test cases/unit/167 import std bmi classes/: main23.cpp  main26.cpp  meson.build  meson.options
test cases/unit/168 header unit dialect divergence/: main20.cpp  main20b.cpp  main23.cpp  meson.build  util.h
test cases/unit/168 header unit divergence/: main20.cpp  main20b.cpp  main23.cpp  meson.build  util.h
test cases/unit/169 header unit bmi classes/: main20.cpp  main20b.cpp  main23.cpp  meson.build
test cases/unit/169 header unit bmi classes/subprojects/modlib/: modlib.cppm
test cases/unit/170 cpp modules pch/: main.cpp  meson.build  modlib.cppm
test cases/unit/171 stl header units/: main.cpp  meson.build
test cases/unit/172 module sources with spaces/: foomain.cpp  main.cpp  meson.build  my mod.cppm
test cases/unit/173 header unit aliasing/: header.hpp  main.cpp  meson.build  meson_options.txt
test cases/unit/174 header unit define divergence/: mainb.cpp  mainfoo.cpp  meson.build
test cases/unit/174 module internal partitions/: meson.build  pkg-impl.cppm  pkg-part.cppm  pkg.cppm
test cases/unit/175 msvc module internal partitions/: main.cpp  meson.build  pkg-impl.cpp
test cases/unit/176 msvc runtime bmi classes/: main.cpp  meson.build  modlib.ixx
test cases/unit/177 msvc module rtti divergence/: main.cpp  meson.build  modlib.ixx
test cases/unit/178 msvc module define divergence/: main.cpp  meson.build  modlib.ixx
test cases/unit/179 msvc header unit rtti divergence/: main.cpp  meson.build  util.h
test cases/unit/180 msvc header unit define divergence/: main.cpp  meson.build  util.h
test cases/unit/181 msvc module eh divergence/: main.cpp  meson.build  modlib.ixx
test cases/unit/182 msvc header unit eh divergence/: main.cpp  meson.build  util.h
test cases/unit/183 module eh rtti divergence/: main.cpp  meson.build  modlib.cppm
test cases/unit/184 header unit eh rtti divergence/: main.cpp  meson.build  util.h
test cases/unit/185 private executable modules/: main1.cpp  main2.cpp  meson.build  test1.cppm  test2.cppm
test cases/unit/186 private executable imports dependency/: libmod.cppm  main1.cpp  meson.build
test cases/unit/187 cpp private module interfaces/: api.cppm  api_impl.cpp  hidden-impl.cppm  hidden.cppm  main.cpp  meson.build  meson_options.txt  pub.cppm
test cases/unit/188 cpp private module interfaces diagnostics/: cyc_a.cppm  cyc_b.cppm  detail.cppm  direct_import_main.cpp  meson.build  meson_options.txt  missing_main.cpp
unittests/: cppmodules.py  failuretests.py  internaltests.py  linuxliketests.py  windowstests.py
(+141 files in other folders)
